--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "pool": "^0.4.1",
     "prism-media": "^1.3.5",
     "prompt-sync": "^4.2.0",
+    "random-memes": "^3.2.6",
     "random-puppy": "^1.1.0",
     "replicate": "^0.11.1",
     "snekfetch": "^4.0.4",
@@ -56,6 +57,7 @@
     "topgg-autoposter": "^2.0.1",
     "winston": "^3.3.3",
     "youtube-ext": "^1.1.16",
+    "youtube-sr": "^4.3.10",
     "yt-search": "^2.10.1",
     "ytdl-core": "^4.11.4"
   }
