--- a/package.json
+++ b/package.json
@@ -9,54 +9,59 @@
   "author": "NaturalTwitch",
   "license": "ISC",
   "dependencies": {
-    "@discord-player/extractor": "^4.4.6",
-    "@discordjs/rest": "^1.6.0",
-    "@koenie06/discord.js-music": "^1.2.9",
-    "@pm2/io": "^4.3.3",
-    "axios": "^1.4.0",
-    "canvacord": "^5.4.8",
-    "canvas": "^2.11.0",
+    "@discord-player/extractor": "^4.5.0",
+    "@discordjs/rest": "^2.3.0",
+    "@evan/opus": "^1.0.3",
+    "@koenie06/discord.js-music": "^1.3.0",
+    "@pm2/io": "^6.0.1",
+    "axios": "^1.7.3",
+    "canvacord": "^6.0.2",
+    "canvas": "^2.11.1",
     "chess-image-generator": "^1.0.9",
-    "chess.js": "^1.0.0-beta.6",
-    "cli-color": "^2.0.3",
+    "chess.js": "^1.0.0-beta.8",
+    "cli-color": "^2.0.4",
     "cross-fetch": "^4.0.0",
     "discord-battleship": "^1.0.4",
     "discord-blackjack": "^4.0.0",
     "discord-canvas": "^1.5.2",
-    "discord-card-canvas": "^1.3.0",
-    "discord-gamecord": "^3.4.0",
+    "discord-card-canvas": "^1.4.4",
+    "discord-gamecord": "^3.4.3",
     "discord-player": "6.6.6",
+    "discord-player-youtubei": "^1.2.5",
+    "discord-voip": "^0.1.3",
     "discord.io": "https://github.com/woor/discord.io/tarball/gateway_v6",
-    "discord.js": "^14.14.1",
+    "discord.js": "^14.15.3",
     "discord.js-tictactoe": "^1.0.2",
     "discord.tictactoegame": "^1.1.8",
-    "djs-commander": "^0.0.45",
-    "dotenv": "^10.0.0",
+    "djs-commander": "^0.0.50",
+    "dotenv": "^16.4.5",
     "ffmpeg": "^0.0.4",
     "ffmpeg-static": "^5.2.0",
     "fs": "^0.0.1-security",
-    "genius-lyrics": "^4.4.3",
-    "got": "^13.0.0",
+    "genius-lyrics": "^4.4.7",
+    "got": "^14.4.2",
     "html-to-image": "^1.11.11",
     "html2canvas": "^1.4.1",
-    "moment": "^2.29.3",
+    "mediaplex": "^0.0.9",
+    "moment": "^2.30.1",
     "moment-duration-format": "^2.3.2",
-    "mongoose": "^6.0.10",
+    "mongoose": "^8.5.2",
     "ms": "^2.1.3",
-    "node": "^16.6.1",
-    "openai": "^4.20.1",
-    "pg": "^8.7.1",
+    "node": "^22.6.0",
+    "openai": "^4.55.1",
+    "pg": "^8.12.0",
+    "play-dl": "^1.9.7",
     "pool": "^0.4.1",
     "prism-media": "^1.3.5",
     "prompt-sync": "^4.2.0",
     "random-puppy": "^1.1.0",
-    "replicate": "^0.11.1",
+    "replicate": "^0.32.0",
     "snekfetch": "^4.0.4",
     "solenolyrics": "^5.0.0",
-    "topgg-autoposter": "^2.0.1",
-    "winston": "^3.3.3",
-    "youtube-ext": "^1.1.16",
-    "yt-search": "^2.10.1",
-    "ytdl-core": "^4.11.4"
+    "topgg-autoposter": "^2.0.2",
+    "winston": "^3.13.1",
+    "youtube-ext": "^1.1.25",
+    "yt-search": "^2.11.1",
+    "ytdl-core": "^4.11.5"
   }
 }
